add django-dev, pi'site can run django itself but not trend to nginx or fastcgi

--- a/.gitignore
+++ b/.gitignore
@@ -1,220 +1,247 @@
 #directory 
-home/pi/web
-home/pi/python_games
-home/pi/Desktop
-home/pi/.*
+/home/pi/web
+/home/pi/python_games
+/home/pi/Desktop
+/home/pi/bin/cosm/cosm-load.json
+/home/pi/bin/cosm/cosm_temp.json
+/home/pi/snsapi-master/mingyan.txt
 /home/pi/ds18b20.json
-bin
-boot
-dev
-etc/.*
-etc/adduser.conf
-etc/alternatives
-etc/apm
-etc/apparmor.d
-etc/apt
-etc/mtab
-etc/asound.conf
-etc/avahi
-etc/bash.bashrc
-etc/bash_completion
-etc/bash_completion.d
-etc/bindresvport.blacklist
-etc/ca-certificates
-etc/ca-certificates.conf
-etc/calendar
-etc/ConsoleKit
-etc/console-setup
-etc/cron.d
-etc/cron.daily
-etc/cron.hourly
-etc/cron.monthly
-etc/crontab
-etc/cron.weekly
-etc/dbus-1
-etc/debconf.conf
-etc/debian_version
-etc/default
-etc/deluser.conf
-etc/dhcp
-etc/dhcp3
-etc/dictionaries-common
-etc/dillo
-etc/dphys-swapfile
-etc/dpkg
-etc/emacs
-etc/environment
-etc/esound
-etc/fake-hwclock.data
-etc/fb.modes
-etc/fonts
-etc/fstab
-etc/fstab.d
-etc/fuse.conf
-etc/gai.conf
-etc/gconf
-etc/gdb
-etc/ghostscript
-etc/groff
-etc/group
-etc/group-
-etc/gshadow
-etc/gshadow-
-etc/gssapi_mech.conf
-etc/gtk-2.0
-etc/gtk-3.0
-etc/host.conf
-etc/hostname
-etc/hosts
-etc/hosts.allow
-etc/hosts.deny
-etc/idmapd.conf
-etc/ifplugd
-etc/init
-etc/init.d
-etc/initramfs-tools
-etc/inputrc
-etc/insserv
-etc/insserv.conf
-etc/insserv.conf.d
-etc/iproute2
-etc/issue
-etc/issue.net
-etc/kbd
-etc/kernel
-etc/ldap
-etc/ld.so.cache
-etc/ld.so.conf
-etc/ld.so.conf.d
-etc/ld.so.preload
-etc/libaudit.conf
-etc/libnl-3
-etc/libpaper.d
-etc/lightdm
-etc/locale.alias
-etc/locale.gen
-etc/localtime
-etc/logcheck
-etc/login.defs
-etc/logrotate.conf
-etc/logrotate.d
-etc/magic
-etc/magic.mime
-etc/mailcap
-etc/mailcap.order
-etc/manpath.config
-etc/menu
-etc/menu-methods
-etc/mime.types
-etc/minicom
-etc/mke2fs.conf
-etc/modprobe.d
-etc/motd
-etc/motd.tail
-etc/mplayer
-etc/mtab -> /proc/mounts
-etc/nanorc
-etc/netconfig
-etc/network
-etc/networks
-etc/nsswitch.conf
-etc/ntp.conf
-etc/openal
-etc/opt
-etc/os-release
-etc/pam.conf
-etc/pam.d
-etc/papersize
-etc/passwd
-etc/passwd-
-etc/perl
-etc/plymouth
-etc/pm
-etc/polkit-1
-etc/profile
-etc/profile.d
-etc/protocols
-etc/pulse
-etc/python
-etc/python2.6
-etc/python2.7
-etc/python3
-etc/python3.2
-etc/rc0.d
-etc/rc1.d
-etc/rc2.d
-etc/rc3.d
-etc/rc4.d
-etc/rc5.d
-etc/rc6.d
-etc/rcS.d
-etc/request-key.d
-etc/resolvconf
-etc/resolv.conf
-etc/rmt
-etc/rpc
-etc/rpi-issue
-etc/rsyslog.conf
-etc/rsyslog.d
-etc/samba
-etc/securetty
-etc/security
-etc/selinux
-etc/services
-etc/sgml
-etc/shadow
-etc/shadow-
-etc/shells
-etc/skel
-etc/ssh
-etc/ssl
-etc/staff-group-for-usr-local
-etc/sudoers
-etc/sudoers.d
-etc/sysctl.conf
-etc/sysctl.d
-etc/systemd
-etc/terminfo
-etc/timezone
-etc/triggerhappy
-etc/ts.conf
-etc/ucf.conf
-etc/udev
-etc/ufw
-etc/vim
-etc/webiopi
-etc/wgetrc
-etc/wpa_supplicant
-etc/X11
-etc/xdg
-etc/xml
-etc/xpdf
-lib
-lost+found
-media
-mnt
-opt
-proc
-root
-run
-sbin
-selinux
-srv
-sys
-tmp
-usr
-var/backups
-var/cache
-var/lib
-var/local
-var/lock
-var/log
-var/mail
-var/opt
-var/run
-var/spool
-var/swap
-var/tmp
+/home/pi/.aptitude
+/home/pi/.gitconfig
+/home/pi/.bash_history
+/home/pi/.bash_logout
+/home/pi/.cache
+/home/pi/.config
+/home/pi/.vim/systags
+/home/pi/.dbus
+/home/pi/.gconf
+/home/pi/.idlerc
+/home/pi/.lesshst
+/home/pi/.local
+/home/pi/.mplayer
+/home/pi/.pip
+/home/pi/.profile
+/home/pi/.pulse
+/home/pi/.pulse-cookie
+/home/pi/.pythonhist
+/home/pi/.ssh
+/home/pi/.viminfo
+/home/pi/.Xauthority
+/home/pi/snsapi-master/sina_account.token.save
+/home/pi/snsapi-master/tencent_account.token.save
+/home/pi/jekyll
+/bin
+/boot
+/dev
+/etc/.*
+/etc/mysql
+/etc/adduser.conf
+/etc/alternatives
+/etc/apm
+/etc/apparmor.d
+/etc/apt
+/etc/mtab
+/etc/apache2
+/etc/javascript-common
+/etc/asound.conf
+/etc/avahi
+/etc/bash.bashrc
+/etc/bash_completion
+/etc/bash_completion.d
+/etc/bindresvport.blacklist
+/etc/ca-certificates
+/etc/ca-certificates.conf
+/etc/calendar
+/etc/ConsoleKit
+/etc/console-setup
+/etc/cron.d
+/etc/cron.daily
+/etc/cron.hourly
+/etc/cron.monthly
+/etc/crontab
+/etc/cron.weekly
+/etc/dbus-1
+/etc/debconf.conf
+/etc/debian_version
+/etc/default
+/etc/deluser.conf
+/etc/dhcp
+/etc/dhcp3
+/etc/dictionaries-common
+/etc/dillo
+/etc/dphys-swapfile
+/etc/dpkg
+/etc/emacs
+/etc/environment
+/etc/esound
+/etc/fake-hwclock.data
+/etc/fb.modes
+/etc/fonts
+/etc/fstab
+/etc/fstab.d
+/etc/fuse.conf
+/etc/gai.conf
+/etc/gconf
+/etc/gdb
+/etc/ghostscript
+/etc/groff
+/etc/group
+/etc/group-
+/etc/gshadow
+/etc/gshadow-
+/etc/gssapi_mech.conf
+/etc/gtk-2.0
+/etc/gtk-3.0
+/etc/host.conf
+/etc/hostname
+/etc/hosts
+/etc/hosts.allow
+/etc/hosts.deny
+/etc/idmapd.conf
+/etc/ifplugd
+/etc/init
+/etc/init.d
+/etc/initramfs-tools
+/etc/inputrc
+/etc/insserv
+/etc/insserv.conf
+/etc/insserv.conf.d
+/etc/iproute2
+/etc/issue
+/etc/issue.net
+/etc/kbd
+/etc/kernel
+/etc/ldap
+/etc/ld.so.cache
+/etc/ld.so.conf
+/etc/ld.so.conf.d
+/etc/ld.so.preload
+/etc/libaudit.conf
+/etc/libnl-3
+/etc/libpaper.d
+/etc/lightdm
+/etc/locale.alias
+/etc/locale.gen
+/etc/localtime
+/etc/logcheck
+/etc/login.defs
+/etc/logrotate.conf
+/etc/logrotate.d
+/etc/magic
+/etc/magic.mime
+/etc/mailcap
+/etc/mailcap.order
+/etc/manpath.config
+/etc/menu
+/etc/menu-methods
+/etc/mime.types
+/etc/minicom
+/etc/mke2fs.conf
+/etc/modprobe.d
+/etc/motd
+/etc/motd.tail
+/etc/mplayer
+/etc/mtab -> /proc/mounts
+/etc/nanorc
+/etc/netconfig
+/etc/nsswitch.conf
+/etc/ntp.conf
+/etc/openal
+/etc/opt
+/etc/os-release
+/etc/pam.conf
+/etc/pam.d
+/etc/papersize
+/etc/passwd
+/etc/passwd-
+/etc/perl
+/etc/plymouth
+/etc/pm
+/etc/polkit-1
+/etc/profile
+/etc/profile.d
+/etc/protocols
+/etc/pulse
+/etc/python
+/etc/python2.6
+/etc/python2.7
+/etc/python3
+/etc/python3.2
+/etc/rc0.d
+/etc/rc1.d
+/etc/rc2.d
+/etc/rc3.d
+/etc/rc4.d
+/etc/rc5.d
+/etc/rc6.d
+/etc/rcS.d
+/etc/request-key.d
+/etc/resolvconf
+/etc/resolv.conf
+/etc/rmt
+/etc/rpc
+/etc/rpi-issue
+/etc/rsyslog.conf
+/etc/rsyslog.d
+/etc/samba
+/etc/securetty
+/etc/security
+/etc/selinux
+/etc/services
+/etc/sgml
+/etc/shadow
+/etc/shadow-
+/etc/shells
+/etc/skel
+/etc/ssh
+/etc/ssl
+/etc/staff-group-for-usr-local
+/etc/sudoers
+/etc/sudoers.d
+/etc/sysctl.conf
+/etc/sysctl.d
+/etc/systemd
+/etc/terminfo
+/etc/timezone
+/etc/triggerhappy
+/etc/ts.conf
+/etc/ucf.conf
+/etc/udev
+/etc/ufw
+/etc/vim
+/etc/webiopi
+/etc/wgetrc
+/etc/wpa_supplicant
+/etc/X11
+/etc/xdg
+/etc/xml
+/etc/xpdf
+/lib
+/lost+found
+/media
+/mnt
+/opt
+/proc
+/root
+/run
+/sbin
+/selinux
+/srv
+/sys
+/tmp
+/usr
+/var/backups
+/var/cache
+/var/lib
+/var/local
+/var/lock
+/var/log
+/var/mail
+/var/opt
+/var/run
+/var/spool
+/var/swap
+/var/tmp
 #other
 .pulse-cookie
 *.ogg
@@ -224,6 +251,7 @@ var/tmp
 *.gz
 *.png
 *.jpg
+*.swp
 #python
 *.py[cod]
 *.egg
