--- a/.gitignore
+++ b/.gitignore
@@ -276,4 +276,34 @@
 *.exe
 *.out
 *.app
-
+/etc/emacs23/
+/etc/postgresql-common/
+/etc/postgresql/
+/etc/zsh/
+/home/pi/.emacs.d/
+/home/pi/.emacs~
+/home/pi/.jedi/
+/home/pi/.oh-my-zsh/
+/home/pi/.sqlite_history
+/home/pi/.vim/bundle/Syntastic/
+/home/pi/.vim/bundle/minibufexplorerpp/
+/home/pi/.vim/bundle/nerdcommenter/
+/home/pi/.vim/bundle/nerdtree/
+/home/pi/.vim/bundle/vim-fugitive/
+/home/pi/.vim/bundle/vim-plugin-viewdoc/
+/home/pi/.zcompdump
+/home/pi/.zsh-update
+/home/pi/.zsh_history
+/home/pi/goagent/
+/home/pi/project/wiringPi/
+/home/weiziliang/
+/var/www/django-dev/pi_dev/todolist.db
+/var/www/django-dev/pi_dev/todolist/
+/var/www/pi_dev/.gitignore
+/var/www/pi_dev/control/
+/var/www/pi_dev/pi/
+/var/www/pi_dev/pi_dev/static/admin
+/var/www/pi_dev/pi_dev/static/eg_bulboff.gif
+/var/www/pi_dev/pi_dev/static/eg_bulbon.gif
+/var/www/pi_dev/pi_dev/static/program.html
+/var/www/pi_dev/pi_dev/static/program/
