--- a/var/www/pi_dev/uwsgi_pi_dev.ini
+++ b/var/www/pi_dev/uwsgi_pi_dev.ini
@@ -8,4 +8,4 @@ processes = 2
 wsgi-file = /var/www/pi_dev/pi_dev/wsgi.py
 #virtualenv = /home/eshlox/projects/eshlox.net
 chdir = /var/www/pi_dev
-touch-reload = /var/www/pi_dev/reload
+#touch-reload = /var/www/pi_dev/reload
